# pybaqus

./: .gitignore  CITATION.cff  LICENSE  README.md  README.rst  build.py  pyproject.toml
.github/workflows/: python-publish.yml
contrib/: modify_abaqus_inp.py
examples/Displacement_visualization/: displacement_visualization.py  model.inp  model_results.fil
pybaqus/: __init__.py  elements.py  faces.py  fil_result.py  fil_result.pyx  model.py  model.pyx  nodes.py  reader.py
src/pybaqus/: __init__.py  elements.py  fil_result.py  model.py  nodes.py  reader.py  step.py
tests/: test_elements.py  test_model.py  test_nodes.py  test_output.py  test_reader.py  test_sets.py
tests/abaqus/: Makefile
tests/abaqus/fil/: discontinuous_numbering_2D.fil  hex_C3D8.fil  quad_CPE4.fil  quad_CPE4H.fil  quad_CPS4.fil  quad_CPS4I.fil  quad_CPS4R.fil  tri_CPE3.fil  tri_CPE3H.fil  tri_CPS3.fil
tests/abaqus/input/: discontinuous_numbering_2D.inp  hex_C3D8.inp  quad_CPE4.inp  quad_CPE4H.inp  quad_CPS4.inp  quad_CPS4I.inp  quad_CPS4R.inp  tri_CPE3.inp  tri_CPE3H.inp  tri_CPS3.inp
tests/abaqus/input/templates/: elem_hex.inp  elem_quad.inp  elem_tri.inp
tests/test_data/: element_results.py
