[project]
name = "pybaqus"
version = "0.2.11"
description = "A Python library for the visualization and post-processing of Abaqus ASCII result files"
readme = "README.md"
authors = [
    { name = "Cristóbal Tapia Camú", email = "crtapia@gmail.com" } 
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.2",
    "pyvista>=0.44.1",
    "scipy>=1.14.1",
    "tqdm>=4.66.5",
    "vtk>=9.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
